--- a/src/main/resources/com/cgvsu/sectorpaintingfxapp/mainwindow.fxml
+++ b/src/main/resources/com/cgvsu/sectorpaintingfxapp/mainwindow.fxml
@@ -7,14 +7,20 @@
 
 <AnchorPane fx:id="anchorPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cgvsu.sectorpaintingfxapp.SectorPaintingController">
     <Canvas fx:id="canvas" height="600" layoutX="-3.0" layoutY="30.0" width="800" AnchorPane.topAnchor="30.0" />
-    <TitledPane expanded="false" text="input">
+    <TitledPane prefHeight="245.0" prefWidth="202.0" text="input">
         <content>
-            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="209.0" prefWidth="200.0">
                 <TextField layoutX="75.0" onAction="#paint" prefHeight="25.0" prefWidth="115.0" promptText="xCenter" fx:id="xCenterField" />
                 <TextField fx:id="yCenterField" layoutX="75.0" layoutY="25.0" onAction="#paint" prefHeight="25.0" prefWidth="115.0" promptText="yCenter" />
                 <TextField fx:id="radiusField" layoutX="75.0" layoutY="50.0" onAction="#paint" prefHeight="25.0" prefWidth="115.0" promptText="raduis" />
                 <TextField fx:id="startAngleField" layoutX="75.0" layoutY="75.0" onAction="#paint" prefHeight="25.0" prefWidth="115.0" promptText="start angle" />
                 <TextField fx:id="lengthField" layoutX="75.0" layoutY="100.0" onAction="#paint" prefHeight="25.0" prefWidth="115.0" promptText="length" />
+                <TextField fx:id="startRed" alignment="CENTER" layoutX="75.0" layoutY="125.0" onAction="#paint" prefHeight="25.0" prefWidth="38.0" promptText="r" />
+                <TextField fx:id="startGreen" alignment="CENTER" layoutX="114.0" layoutY="125.0" onAction="#paint" prefHeight="25.0" prefWidth="38.0" promptText="g" />
+                <TextField fx:id="startBlue" alignment="CENTER" layoutX="152.0" layoutY="125.0" onAction="#paint" prefHeight="25.0" prefWidth="38.0" promptText="b" />
+                <TextField fx:id="endRed" alignment="CENTER" layoutX="75.0" layoutY="150.0" onAction="#paint" prefHeight="25.0" prefWidth="38.0" promptText="r" />
+                <TextField fx:id="endGreen" alignment="CENTER" layoutX="114.0" layoutY="150.0" onAction="#paint" prefHeight="25.0" prefWidth="38.0" promptText="g" />
+                <TextField fx:id="endBlue" alignment="CENTER" layoutX="152.0" layoutY="150.0" onAction="#paint" prefHeight="25.0" prefWidth="38.0" promptText="b" />
                 <Label layoutX="12.0" prefHeight="15.0" prefWidth="60.0" text="xCenter">
                     <font>
                         <Font size="16.0" />
@@ -40,8 +46,18 @@
                         <Font size="16.0" />
                     </font>
                 </Label>
-                <Button layoutX="51.0" layoutY="141.0" mnemonicParsing="false" onAction="#paint" text="Paint" />
-                <Button layoutX="111.0" layoutY="141.0" mnemonicParsing="false" onAction="#clear" text="Clear" />
+                <Button layoutX="44.0" layoutY="184.0" mnemonicParsing="false" onAction="#paint" text="Paint" />
+                <Button layoutX="111.0" layoutY="184.0" mnemonicParsing="false" onAction="#clear" text="Clear" />
+            <Label layoutX="5.0" layoutY="128.0" prefHeight="20.0" prefWidth="74.0" text="Start color">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="5.0" layoutY="153.0" prefHeight="20.0" prefWidth="74.0" text="End color">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
             </AnchorPane>
         </content>
     </TitledPane>
