--- a/src/main/resources/com/cgvsu/sectorpaintingfxapp/mainwindow.fxml
+++ b/src/main/resources/com/cgvsu/sectorpaintingfxapp/mainwindow.fxml
@@ -1,73 +1,62 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.canvas.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<AnchorPane fx:id="anchorPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.cgvsu.sectorpaintingfxapp.SectorPaintingController">
-    <Canvas fx:id="canvas" height="600" layoutX="-3.0" layoutY="30.0" width="800" AnchorPane.topAnchor="30.0"/>
+
+<AnchorPane fx:id="anchorPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cgvsu.sectorpaintingfxapp.SectorPaintingController">
+    <Canvas fx:id="canvas" height="600" layoutX="-3.0" layoutY="30.0" width="800" AnchorPane.topAnchor="30.0" />
     <TitledPane expanded="false" prefHeight="245.0" prefWidth="202.0" text="input">
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="209.0" prefWidth="200.0">
-            <TextField layoutX="75.0" onAction="#paint" prefHeight="25.0" prefWidth="115.0" promptText="xCenter"
-                       fx:id="xCenterField"/>
-            <TextField fx:id="yCenterField" layoutX="75.0" layoutY="25.0" onAction="#paint" prefHeight="25.0"
-                       prefWidth="115.0" promptText="yCenter"/>
-            <TextField fx:id="radiusField" layoutX="75.0" layoutY="50.0" onAction="#paint" prefHeight="25.0"
-                       prefWidth="115.0" promptText="radius"/>
-            <TextField fx:id="startAngleField" layoutX="75.0" layoutY="75.0" onAction="#paint" prefHeight="25.0"
-                       prefWidth="115.0" promptText="start angle"/>
-            <TextField fx:id="lengthField" layoutX="75.0" layoutY="100.0" onAction="#paint" prefHeight="25.0"
-                       prefWidth="115.0" promptText="length"/>
-            <TextField fx:id="startRed" alignment="CENTER" layoutX="75.0" layoutY="125.0" onAction="#paint"
-                       prefHeight="25.0" prefWidth="38.0" promptText="r"/>
-            <TextField fx:id="startGreen" alignment="CENTER" layoutX="114.0" layoutY="125.0" onAction="#paint"
-                       prefHeight="25.0" prefWidth="38.0" promptText="g"/>
-            <TextField fx:id="startBlue" alignment="CENTER" layoutX="152.0" layoutY="125.0" onAction="#paint"
-                       prefHeight="25.0" prefWidth="38.0" promptText="b"/>
-            <TextField fx:id="endRed" alignment="CENTER" layoutX="75.0" layoutY="150.0" onAction="#paint"
-                       prefHeight="25.0" prefWidth="38.0" promptText="r"/>
-            <TextField fx:id="endGreen" alignment="CENTER" layoutX="114.0" layoutY="150.0" onAction="#paint"
-                       prefHeight="25.0" prefWidth="38.0" promptText="g"/>
-            <TextField fx:id="endBlue" alignment="CENTER" layoutX="152.0" layoutY="150.0" onAction="#paint"
-                       prefHeight="25.0" prefWidth="38.0" promptText="b"/>
+            <TextField layoutX="75.0" onAction="#paint" prefHeight="25.0" prefWidth="115.0" promptText="xCenter" fx:id="xCenterField" />
+            <TextField fx:id="yCenterField" layoutX="75.0" layoutY="25.0" onAction="#paint" prefHeight="25.0" prefWidth="115.0" promptText="yCenter" />
+            <TextField fx:id="radiusField" layoutX="75.0" layoutY="50.0" onAction="#paint" prefHeight="25.0" prefWidth="115.0" promptText="radius" />
+            <TextField fx:id="startAngleField" layoutX="75.0" layoutY="75.0" onAction="#paint" prefHeight="25.0" prefWidth="115.0" promptText="start angle" />
+            <TextField fx:id="lengthField" layoutX="75.0" layoutY="100.0" onAction="#paint" prefHeight="25.0" prefWidth="115.0" promptText="length" />
+            <TextField fx:id="startRed" alignment="CENTER" layoutX="75.0" layoutY="125.0" onAction="#paint" prefHeight="25.0" prefWidth="38.0" promptText="r" text="255" />
+            <TextField fx:id="startGreen" alignment="CENTER" layoutX="114.0" layoutY="125.0" onAction="#paint" prefHeight="25.0" prefWidth="38.0" promptText="g" text="0" />
+            <TextField fx:id="startBlue" alignment="CENTER" layoutX="152.0" layoutY="125.0" onAction="#paint" prefHeight="25.0" prefWidth="38.0" promptText="b" text="0" />
+            <TextField fx:id="endRed" alignment="CENTER" layoutX="75.0" layoutY="150.0" onAction="#paint" prefHeight="25.0" prefWidth="38.0" promptText="r" text="0" />
+            <TextField fx:id="endGreen" alignment="CENTER" layoutX="114.0" layoutY="150.0" onAction="#paint" prefHeight="25.0" prefWidth="38.0" promptText="g" text="0" />
+            <TextField fx:id="endBlue" alignment="CENTER" layoutX="152.0" layoutY="150.0" onAction="#paint" prefHeight="25.0" prefWidth="38.0" promptText="b" text="255" />
             <Label layoutX="12.0" layoutY="4.0" prefHeight="15.0" prefWidth="60.0" text="Center X">
                 <font>
-                    <Font size="15.0"/>
+                    <Font size="15.0" />
                 </font>
             </Label>
             <Label layoutX="14.0" layoutY="50.0" prefHeight="15.0" prefWidth="60.0" text="Raduis">
                 <font>
-                    <Font size="16.0"/>
+                    <Font size="16.0" />
                 </font>
             </Label>
             <Label layoutX="5.0" layoutY="78.0" prefHeight="20.0" prefWidth="74.0" text="Start angle">
                 <font>
-                    <Font size="14.0"/>
+                    <Font size="14.0" />
                 </font>
             </Label>
             <Label layoutX="14.0" layoutY="100.0" prefHeight="15.0" prefWidth="60.0" text="Length">
                 <font>
-                    <Font size="16.0"/>
+                    <Font size="16.0" />
                 </font>
             </Label>
             <Label layoutX="5.0" layoutY="128.0" prefHeight="20.0" prefWidth="74.0" text="Start color">
                 <font>
-                    <Font size="14.0"/>
+                    <Font size="14.0" />
                 </font>
             </Label>
             <Label layoutX="7.0" layoutY="153.0" prefHeight="20.0" prefWidth="74.0" text="End color">
                 <font>
-                    <Font size="14.0"/>
+                    <Font size="14.0" />
                 </font>
             </Label>
             <Label layoutX="12.0" layoutY="27.0" prefHeight="15.0" prefWidth="60.0" text="Center Y">
                 <font>
-                    <Font size="15.0"/>
+                    <Font size="15.0" />
                 </font>
             </Label>
-            <Button layoutX="44.0" layoutY="184.0" mnemonicParsing="false" onAction="#paint" text="Paint"/>
-            <Button layoutX="111.0" layoutY="184.0" mnemonicParsing="false" onAction="#clear" text="Clear"/>
+            <Button layoutX="44.0" layoutY="184.0" mnemonicParsing="false" onAction="#paint" text="Paint" />
+            <Button layoutX="111.0" layoutY="184.0" mnemonicParsing="false" onAction="#clear" text="Clear" />
         </AnchorPane>
     </TitledPane>
 </AnchorPane>
